Updates from Overleaf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,6 +10,7 @@
 % - Are we clear that we exponentiate the model to get the true data expectation?
 % - Are we consistent in our use of Doppler shift, radial velocity, and redshift and so on?
 % - Are we sensible in our use of first person?
+% - Do we address the relationship between our tiny spectral segment and a full spectrograph? Get scalings. Etc.
 
 \documentclass[modern]{aastex631}
 \usepackage[utf8]{inputenc}
@@ -359,7 +360,7 @@ This is illustrated in \figref{fig:ccf}.
 \begin{figure}[t]
   \begin{mdframed}
     \begin{center}
-    [HOGG: NEED FIGURE HERE]
+    \includegraphics[width=\textwidth]{../notebook/ccf.png}
     \end{center}
     \caption{HOGG: Something that shows the CCF for one epoch, and a zoom in showing the parabola fit.\label{fig:ccf}}
   \end{mdframed}
