Updates from Overleaf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -372,7 +372,7 @@ As expected, these radial-velocity estimates also saturate the information-theor
 \begin{figure}[t]
   \begin{mdframed}
     \begin{center}
-    [HOGG: NEED FIGURE HERE]
+    \includegraphics[width=\textwidth]{../notebook/ccfrvs.png}
     \end{center}
     \caption{HOGG: Something that shows the CCF RVs for all epochs, that they saturate the bound.\label{fig:ccfrvs}}
   \end{mdframed}
