Updates from Overleaf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -457,7 +457,7 @@ These post-processed binary-mask results do saturate the bound.
 \begin{figure}[t]
   \begin{mdframed}
     \begin{center}
-    [HOGG: NEED FIGURE HERE]
+    \includegraphics[width=\textwidth]{../notebook/bccfrvswrong.png}
     \end{center}
     \caption{HOGG: Something that shows the binary-mask CCF RVs are terrible if naively optimized.\label{fig:bccfrvswrong}}
   \end{mdframed}
@@ -465,7 +465,7 @@ These post-processed binary-mask results do saturate the bound.
 \begin{figure}[t]
   \begin{mdframed}
     \begin{center}
-    [HOGG: NEED FIGURE HERE]
+    \includegraphics[width=\textwidth]{../notebook/bccfrvs.png}
     \end{center}
     \caption{HOGG: Something that shows the binary-mask CCFs deliver good RVs when fit after the fact with a Gaussian function.\label{fig:bccfrvs}}
   \end{mdframed}
@@ -497,7 +497,7 @@ We show the empirical-spectrum cross-correlation radial-velocity results in \fig
 \begin{figure}[t]
   \begin{mdframed}
     \begin{center}
-    [HOGG: NEED FIGURE HERE]
+    \includegraphics[width=\textwidth]{../notebook/empiricalrvs.png}
     \end{center}
     \caption{HOGG: Something that shows the empirical-spectrum CCFs deliver good RVs.\label{fig:empiricalrvs}}
   \end{mdframed}
