Updates from Overleaf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -274,8 +274,16 @@ We included no telluric absorption in these toy data.
     \begin{center}
     \includegraphics[width=\textwidth]{../notebook/data.png}
     \end{center}
-    \caption{Several example toy-data spectra, generated according to the rules described in the main text.
+    \caption{Two example toy-data spectra, generated according to the rules described in the main text.
     At each epoch the true spectrum has the same overall shape; the only differences from epoch to epoch are from Doppler-shift changes and shot noise.\label{fig:data}}
+  \end{mdframed}
+\end{figure}
+\begin{figure}[tp]
+  \begin{mdframed}
+    \begin{center}
+    \includegraphics[width=\textwidth]{../notebook/datazoom.png}
+    \end{center}
+    \caption{A zoom in on one of the toy-data spectra. Shown are both the data (dark black step function) and the true spectral model (thin red smooth line). The data for this epoch is Doppler shifted relative to the model, which is at zero Doppler shift.\label{fig:datazoom}}
   \end{mdframed}
 \end{figure}
 
