update figure sizes

--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# has to be in its own cell?\n",
-    "plt.rc('figure', figsize=(6.0, 3.6), dpi=150, autolayout=True)\n",
+    "plt.rc('figure', figsize=(6.0, 3.0), dpi=150, autolayout=True)\n",
     "plt.rc('text', usetex=True)"
    ]
   },
@@ -198,7 +198,8 @@
     "axes[1].set_xlim(8.702, 8.703)\n",
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))"
+    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "fig.savefig(\"datazoom.png\")"
    ]
   },
   {
@@ -442,6 +443,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = np.arange(len(true_dopplers))\n",
+    "plt.plot(epochs, c * true_dopplers, \"rx\", zorder=100, label=\"true Doppler shifts\")\n",
+    "plt.plot(epochs, c * best_llf_dopplers, \"ko\", alpha=0.9, label=\"maximum-likelihood estimates\")\n",
+    "plt.xlabel(\"epoch number\")\n",
+    "plt.ylabel(\"Doppler shift $c\\,\\delta x$ (km/s)\")\n",
+    "plt.title(\"Full toy-data dataset\")\n",
+    "plt.legend()\n",
+    "plt.savefig(\"full.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "0ADJlRwqzflT"
    },
@@ -449,7 +466,8 @@
    "source": [
     "# plot the residuals of the ML RVs vs true RV\n",
     "plot_resids(c * (best_llf_dopplers - true_dopplers))\n",
-    "plt.title(\"maximum-likelihood RVs\")"
+    "plt.title(\"maximum-likelihood RVs\")\n",
+    "plt.savefig(\"mlrvs.png\")"
    ]
   },
   {
@@ -747,13 +765,15 @@
     "for ax in axes:\n",
     "    ax.step(xs, ys[j], color=\"k\", where=\"mid\", alpha=0.9)\n",
     "    ax.set_ylabel(r\"flux $y$\")\n",
-    "    ax.plot(xs, np.mean(empirical_spectra(xs, 0., ys, true_dopplers), axis=0), \"r-\", alpha=0.5, lw=1)\n",
+    "    ax.plot(xs, np.mean(empirical_spectra(xs, 0., ys, true_dopplers), axis=0), \"r-\",\n",
+    "            alpha=0.5, lw=1)\n",
     "    ax.ticklabel_format(useOffset=False)\n",
     "axes[0].set_xlim(8.700, 8.701)\n",
     "axes[1].set_xlim(8.702, 8.703)\n",
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
-    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))"
+    "axes[0].set_title(\"epoch {}; $\\delta x = {:+f}$\".format(j, true_dopplers[j]))\n",
+    "fig.savefig(\"empirical.png\")"
    ]
   },
   {
