figures and text

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -502,7 +502,17 @@ This process can be iterated to convergence.
 In this process, the initialization matters.
 In making the results in this \sectionname, we initialized at the wrong binary-mask results shown in \figref{fig:bccfrvswrong}, not at good radial-velocities, and yet the results are excellent.
 That is, we didn't cheat.
-We show the empirical-spectrum cross-correlation radial-velocity results in \figref{fig:empiricalrvs}
+We show the empirical template in \figref{fig:empirical} and we show the
+empirical-spectrum cross-correlation radial-velocity results in \figref{fig:empiricalrvs}
+
+\begin{figure}[tp]
+  \begin{mdframed}
+    \begin{center}
+    \includegraphics[width=\textwidth]{../notebook/empirical.png}
+    \end{center}
+    \caption{HOGG: A visualization of part of the empirical template. HOGG: Comment on the left edge (no windows).\label{fig:empirical}}
+  \end{mdframed}
+\end{figure}
 
 \begin{figure}[tp]
   \begin{mdframed}
