--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -114,7 +114,8 @@
     "def true_spectrum(xs, doppler, lxs=line_xs, ews=line_ews, sigma=sigma_x):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
-    "    return np.exp(-1. * np.sum(ews[None, :] * oned_gaussian(xs[:, None] - doppler - lxs[None, :], sigma), axis=1))\n",
+    "    return np.exp(-1. * np.sum(ews[None, :] * oned_gaussian(xs[:, None] - doppler\n",
+    "                                                            - lxs[None, :], sigma), axis=1))\n",
     "\n",
     "def ivar(ys, continuum_ivar):\n",
     "    return continuum_ivar / ys\n",
@@ -174,7 +175,7 @@
     "    ax.set_ylabel(r\"flux $y$\")\n",
     "ax.set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "plt.xlim(x_min, x_max)\n",
-    "plt.ylim(0.1, 1.1)\n",
+    "plt.ylim(-0.1, 1.1)\n",
     "plt.savefig(\"data.png\")"
    ]
   },
@@ -288,7 +289,7 @@
    "source": [
     "# get the CCF RV for one epoch\n",
     "ccs = cross_correlation_function(dopplers, xs, ys[j])[0]\n",
-    "ddp = np.arange(true_dopplers[j] - 0.5 / R, true_dopplers[j] + 0.5 / R, 0.01 / R)\n",
+    "ddp = np.arange(true_dopplers[j] - 1.5 / R, true_dopplers[j] + 1.5 / R, 0.01 / R)\n",
     "best_doppler, ccp = hogg_parabola_trick(ccs, dopplers, ddp)\n",
     "print(best_doppler)"
    ]
@@ -308,15 +309,15 @@
     "        ax.axvline(c * doppler, color=\"k\", alpha=0.5, lw=1)\n",
     "        ax.plot(c * ddp, ccp, \"k-\", alpha=0.5, lw=1)\n",
     "        ax.plot(c * dopplers, ccs, \"k.\", alpha=0.9)\n",
-    "    axes[0].set_xlim(np.min(c * dopplers), np.max(c * dopplers))\n",
-    "    axes[1].set_xlim(c * doppler - 4. * c * Delta_x, c * doppler + 4. * c * Delta_x)\n",
+    "    axes[0].set_xlim(-3.2e4, 3.2e4)\n",
+    "    axes[1].set_xlim(c * doppler - 3000., c * doppler + 3000.)\n",
     "    axes[0].set_xlabel(r\"Doppler shift $c\\,\\delta x$ (m/s)\")\n",
     "    axes[0].get_yaxis().set_ticks([])\n",
     "    axes[1].get_xaxis().set_ticks([])\n",
     "    axes[0].set_ylabel(ylabel)\n",
     "    axes[0].set_title(\"epoch {}\".format(j))\n",
     "    return fig\n",
-    "fig = plot_ccf(best_doppler, ccs, ddp, ccp, r\"naive cross-correlation amplitude\")\n",
+    "fig = plot_ccf(best_doppler, ccs, ddp, ccp, r\"cross-correlation amplitude\")\n",
     "fig.savefig(\"ccf.png\")"
    ]
   },
@@ -353,7 +354,7 @@
     "    plt.xlabel(\"true Doppler shift $c\\,\\delta x$ (m/s)\")\n",
     "    plt.ylabel(\"residual $c\\,(\\widehat{\\delta x} - \\delta x)$ (m/s)\")\n",
     "plot_resids(c * (best_ccf_dopplers - true_dopplers))\n",
-    "plt.title(\"naive (but normalized) cross-correlation RVs\")\n",
+    "plt.title(\"naive (but normalized) cross-correlation estimates\")\n",
     "plt.savefig(\"ccfrvs.png\")"
    ]
   },
@@ -466,7 +467,7 @@
    "source": [
     "# plot the residuals of the ML RVs vs true RV\n",
     "plot_resids(c * (best_llf_dopplers - true_dopplers))\n",
-    "plt.title(\"maximum-likelihood RVs\")\n",
+    "plt.title(\"maximum-likelihood estimates\")\n",
     "plt.savefig(\"mlrvs.png\")"
    ]
   },
@@ -662,7 +663,7 @@
    "source": [
     "# plot the residuals of the wrongly optimized binary-mask CCF RVs vs true RV\n",
     "plot_resids(c * (best_wrong_bccf_dopplers - true_dopplers))\n",
-    "plt.title(\"wrongly optimized binary-mask cross-correlation radial velocities\")\n",
+    "plt.title(\"naively optimized binary-mask cross-correlation estimates\")\n",
     "plt.savefig(\"bccfrvswrong.png\")"
    ]
   },
@@ -688,7 +689,7 @@
    "source": [
     "# plot the residuals of the correctly-fit binary-mask RVs vs true RV\n",
     "plot_resids(c * (best_bccf_dopplers - true_dopplers))\n",
-    "plt.title(\"Gaussian-fit binary-mask cross-correlation radial velocities\")\n",
+    "plt.title(\"Gaussian-fit binary-mask cross-correlation estimates\")\n",
     "plt.savefig(\"bccfrvs.png\")"
    ]
   },
@@ -717,7 +718,8 @@
     "                              bounds_error=False, fill_value=1.)(xs - doppler)\n",
     "    return fs\n",
     "\n",
-    "def empirical_ccf(dopplers, xs, ys, current_best_dopplers, weights=None, normalize=True, loo=True):\n",
+    "def empirical_ccf(dopplers, xs, ys, current_best_dopplers,\n",
+    "                  weights=None, normalize=True, loo=True):\n",
     "    tys = np.atleast_2d(ys)\n",
     "    if weights is None:\n",
     "        weights = np.ones_like(tys)\n",
@@ -801,7 +803,7 @@
    "source": [
     "resids = c * (best_empirical_ccf_dopplers - true_dopplers)\n",
     "plot_resids(resids)\n",
-    "plt.title(\"empirical-template cross-correlation radial velocities\")\n",
+    "plt.title(\"empirical-template cross-correlation estimates\")\n",
     "plt.savefig(\"empiricalrvs.png\")"
    ]
   },
