--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -224,6 +224,7 @@
     "    tys = np.atleast_2d(ys)\n",
     "    if weights is None:\n",
     "        weights = np.ones_like(tys)\n",
+    "    assert tys.shape == weights.shape\n",
     "    I = len(dopplers)\n",
     "    J = len(tys)\n",
     "    ccfs = np.zeros((J, I))\n",
@@ -255,7 +256,6 @@
     "    - Could be sped up enormously by caching the templates it makes over and over!\n",
     "    \"\"\"\n",
     "    J = len(ys)\n",
-    "    assert len(xs) == len(ys[0])\n",
     "    dopplers = np.arange(-4.e4/c, 4.e4/c, 0.25/R) # MAGIC\n",
     "    best_dopplers = np.zeros(J)\n",
     "    ccs = cross_correlation_function(dopplers, xs, ys, normalize=normalize)\n",
@@ -810,11 +810,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make and add wavelength calibration issues\n",
+    "noisyxs = xs[None, :] + 0.001 * Delta_x * np.random.normal(size=ys.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "UtROaaNOjc9M"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# make and add unmodeled telluric issues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make and introduce variations in spectral line strengths"
+   ]
   }
  ],
  "metadata": {
